--- a/src/app/productspage/productspage.component.html
+++ b/src/app/productspage/productspage.component.html
@@ -1,3 +1,8 @@
-<p>
-  productspage works!
-</p>
+<h1>Flower Power Products</h1>
+
+<div>
+  <app-displayproducts
+    *ngFor = "let product of products"
+    [product] = "product"></app-displayproducts>
+    > 
+</div>
