adding about page

--- a/src/app/aboutpage/aboutpage.component.html
+++ b/src/app/aboutpage/aboutpage.component.html
@@ -1,3 +1,84 @@
-<p>
-  aboutpage works!
-</p>
+<div class="info">
+  <div class="infoTwo">
+    <img src="../../assets/giantflowerLOGO.png" />
+
+
+
+    <h1> About Our Power </h1>
+
+    <div class="infoThree">
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a
+        type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining
+        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+        Ipsum
+        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+        Ipsum.
+      </p>
+
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a
+        type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining
+        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+        Ipsum
+        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+        Ipsum.
+      </p>
+
+    </div>
+
+    <section id="contact">
+      <div class="container">
+        <br>
+        <br>
+        <h2 class="text-center text-uppercase">Contact The Flower</h2>
+        <div class="row">
+          <div class="col-12">
+            <form action="https://formspree.io/sarahtoshikolabarge@gmail.com" method="POST">
+              <div class="control-group">
+                <div class="form-group">
+                  <label>Name</label>
+                  <input type="text" class="form-control" placeholder="Your Name" id="name" required
+                    data-validation-required-message="Please enter your name" name="name">
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="control-group">
+                <div class="form-group">
+                  <label>Email Address</label>
+                  <input type="email" class="form-control" placeholder="Your Email" id="email" required
+                    data-validation-required-message="Please enter your email" name="_replyto">
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="control-group">
+                <div class="form-group">
+                  <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required
+                    data-validation-required-message="Please leave a message" name="message"></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="text-center">
+                <div id="success"></div>
+                <button type="submit" class="btn btn-lg btn-light">
+                  <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                  Send Message
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </div>
+
+
+
+</div>
