--- a/src/app/adminproductspage/adminproductspage.component.html
+++ b/src/app/adminproductspage/adminproductspage.component.html
@@ -1,3 +1,8 @@
-<p>
-  adminproductspage works!
-</p>
+<h1>Admin Products View</h1>
+
+<div *ngFor = "let product of products">
+
+    <app-displayproducts [product] = "product"></app-displayproducts>
+    <button (click) = "deleteProduct(product.id)">Delete {{ product.product_name }}</button>
+    <hr>
+</div>
