--- a/src/app/displayproducts/displayproducts.component.html
+++ b/src/app/displayproducts/displayproducts.component.html
@@ -1,17 +1,17 @@
-<div class = product>
-  <h1>
-    {{ _product.product_name}}
-  </h1>
+<div class="deck">
+  <div class="card">
+    <div class="cardContainer">
+      <h1>
+        {{ _product.product_name}}
+      </h1>
 
-  <img src = {{_product.product_image}}>
+      <img src={{_product.product_image}}>
 
-  <h4>Description</h4>
-  <p>{{ _product.product_description }}</p>
+      <h4>Description</h4>
+      <p>{{ _product.product_description }}</p>
 
-  <h4>Price</h4>
-  <p>{{ _product.product_price }}$</p>
-
-  <hr>
-
-
+      <h4>Price</h4>
+      <p>{{ _product.product_price }}$</p>
+    </div>
+  </div>
 </div>
