--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,14 +1,7 @@
-
-<div class="jumbotron p-0">
-  <div class="view overlay rounded-top waves-light" mdbWavesEffect>
-    <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(134).jpg" class="img-fluid" alt="Sample image">
-  </div>
-  <!-- Card content -->
-  <div class="card-body text-center mb-3"></div>
-</div>
-
-
+<div class="text">
 <div>
+  <img class="logo" src="../../assets/giantflowerLOGO.png" alt="logo">
+</div>
 
   <h1>The Flower Power Mission</h1>
   <p>
