--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<h1>Awesome Teams Garden Store Project</h1>
-
-<nav>
-  <a routerLink="/home">Home</a>
-  <a routerLink="/about">About</a>
-  <a routerLink="/products">Products</a>
-  <a routerLink="/admin">Admin Portal</a>
-</nav>
-
+<div class="nav">
+  <h1>Awesome Teams Garden Store Project</h1>
+  <nav>
+    <a routerLink="/home">Home</a>
+    <a routerLink="/about">About</a>
+    <a routerLink="/products">Products</a>
+    <a routerLink="/admin">Admin Portal</a>
+  </nav>
+</div>
 <router-outlet></router-outlet>
